[project]
name = "octopus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncclick>=8.3.0.7",
    "better-exceptions>=0.3.3",
    "influxdb-client>=1.50.0",
    "influxdb3-python>=0.16.0",
    "pendulum>=3.1.0",
    "python-graphql-client>=0.4.3",
]
